# sandbox

./: .gitignore  Makefile  TODO
autotools/: README  TODO  configure.ac
autotools/m4/: acx_mpi.m4
autotools/src/: Makefile.am  Makefile.in  mpi.c  mpi.cxx  test.cxx
buildbot/: buildbot.tac  master.cfg  state.sqlite
c_fort/: Makefile  c_main.cpp  c_sub.cpp  f_main.f90  f_sub.f90  main.cpp  sub.f90
camus/: User_manual  compile_and_run.sh  pos.d_membrane  vel.d_membrane  zz_aij.dat_membrane  zz_bond.dat_membrane  zz_part.dat_membrane  zz_test.inp_membrane
cuda_mpi/: 00_hello.cu  01_device.cu  02_send_recv.cu  03_isend_irecv.cu  04_isend_irecv.cu  05_unified.cu  06_cuda_aware.cu
cutlass/: Makefile  cutlass_dispatch.h  gemm.cu
direct/: Makefile  avx.c  avx.cxx  avx_i.c  avx_j.c  cuda.cu  direct.cxx  direct_asm.cxx  knc.c  knl.c  mic.c  mic.cxx  mic2.c  mic2.cxx  mpi_avx.cxx  mpi_fugaku.cxx  mpi_knl.cxx  mpi_nosimd.cxx  nosimd.c  openacc.c  p2p.cxx  simd.h  sse.c  sse.cu  sse.cxx
ewald/: Makefile
exafmm/: Makefile  Makefile.include  Policy  TODO
exafmm2d/: Makefile  TODO  args.h  buildtree.h  dataset.h  kernel.h  logger.h  macros.h  test.cxx  traversal.h  types.h  updownpass.h
fastCPU/: Makefile  a.out  cartesian.h  evaluator.h  main.cxx  serialfmm.h  types.h
fastGPU/: Makefile  Particle4.h  Treecode.h  a.out  approximate.cu  buildTree.cu  buildtree.h  computeForces.cu  computeMultipoles.cu  cuda_primitives.h  cudamem.h  cudavec.h  dataset.h  groupTargets.cu  grouptargets.h  kahan.h  kernel.h  main.cu  makeGroups.cu  plummer.h  scanKernels.cu  serial.cu  (+10 more)
(+515 files in other folders)
